--- a/public/css/cover.css
+++ b/public/css/cover.css
@@ -76,8 +76,6 @@ body {
 }
 
 .dropdown-menu {
-  /* position: static; */
-  /* display: block; */
   width: auto;
   margin: 4rem auto;
   max-height: 10rem;
@@ -120,4 +118,20 @@ body {
 .form-control-dark {
   background-color: rgba(255, 255, 255, .05);
   border-color: rgba(255, 255, 255, .15);
+}
+
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+#content-wrap {
+  padding-bottom: 2.5rem;    /* Footer height */
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;            /* Footer height */
 }
