--- a/views/artifact-evaluation.ejs
+++ b/views/artifact-evaluation.ejs
@@ -40,82 +40,156 @@
     
         <!-- Custom styles for this template -->
         <link href="css/cover.css" rel="stylesheet">
-        <script src="../public/scripts/artifact-evaluation.js"></script>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.css" rel="stylesheet">
+        <script src="scripts/artifact-evaluation.js"></script>
+        <script src="scripts/header.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>  
-        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
-    </head>
-    <body class="d-flex h-100 text-center text-white bg-dark">
+
+      </head>
+    <body onload="navCheck()" class="d-flex text-center text-white bg-dark">
         <div class="container d-flex w-100 h-100 p-3 mx-auto flex-column">
             
             <%- include('common/header'); -%>
             
-            <main class="pt-5 px-3">
+            <main class="pt-5 px-3 justify-content-center">
                 <h1>Artifact Evaluation</h1>
                 <p class="lead">Use the options below to build your artifact for evaluation</p>
-                <div class="row row-cols-1 row-cols-lg-12 align-items-stretch g-4 py-3">
+                <div class="row">
                     <div class="col-4">
-                      <div class="card border-light h-100 overflow-hidden text-white bg-dark rounded-5">
-                        <div class="d-flex flex-column h-100 p-5 text-white">
-                          <h1 class="mt-3 mb-3 display-6 lh-1 fw-bold">NAH</h1>
-                          <h2 class="mb-3 display-6 lh-1">Users Registered</h2>
+                      <div class="card border border-light overflow-hidden text-white bg-dark rounded-5 align-items-center">
+                        <div class="row mt-3">
+                          <h2 id="rarityNumber"class="p-1 text-white">Rarity</h2>
+                        </div>
+                        <div class="row">
+                          <h2 id="setName"class="p-1 text-white">Set Name</h2>
+                        </div>
+                        <div class="row">
+                          <h2 id="typeName"class="p-1 text-white">Set Piece Name</h2>
+                        </div>
+                        <div class="row">
+                          <h2 id="levelNumber"class="p-1 text-white">Lvl 0</h2>
+                        </div>
+                        <div class="row">
+                          <h2 id="mainStat"class="p-1 text-white">Main Stat</h2>
+                        </div>
+                        <div class="row">
+                          <h2 id="subStat1"class="p-1 text-white">Sub Stat 1</h2>
+                        </div>
+                        <div class="row">
+                          <h2 id="subStat2"class="p-1 text-white">Sub Stat 2</h2>
+                        </div>
+                        <div class="row">
+                          <h2 id="subStat3"class="p-1 text-white">Sub Stat 3</h2>
+                        </div>
+                        <div class="row mb-3">
+                          <h2 id="subStat4"class="p-1 text-white">Sub Stat 4</h2>
                         </div>
                       </div>
                     </div>
                     <div class="col-8">
-                        <div class="card border-light h-100 overflow-hidden text-white bg-dark rounded-5">
-                          <div class="row row-cols-2">
-                            <div class="col">
-                              <div class="d-flex flex-column h-100 p-5 text-white">
-                                <h1 class="mt-3 mb-3 display-6 lh-1 fw-bold">Set</h1>
+                        <div class="card border border-light overflow-hidden text-white bg-dark rounded-5">
+                          <form>
+                          <div class="row mt-3">
+                              <div class="col-3 p-1">
+                                  <h2 class="text-white text-end">Rarity:</h2>
+                                </div>
+                              <div class="col p-1">
+                                <div class="btn-group btn-block btn-lg" role="group" id="rarityButtons">
+                                  <% rarities.forEach(rarity => { %>
+                                    <button onclick="rarityClick(this)" type="button" class="btn btn-outline-light rarity-btn" data-level="<%= rarity.max_level %>"" ><%= rarity.rarity %></button>
+                                  <% }) %>
+                                  </div>
+                                </div>
                               </div>
+                              <div class="row">
+                             <div class="col-3 p-1">
+                                <h2 class="text-white text-end">Set:</h2>
                             </div>
-                          <div class="col">
-                            <div class="dropdown dropdown-dark border-0 pt-0 mx-0 rounded-3">
-                              <button class="btn btn-dark btn-outline-light dropdown-toggle" type="button" id="setDropdownButton" data-bs-toggle="dropdown" aria-expanded="false">Pick a Set <span class="caret"></span></span></button>
-                              <ul class="dropdown-menu dropdown-menu-dark mb-0" aria-labelledby="setDropdownButton" id="setDropdownItems">
+                          <div class="col p-1">
+                              <button class="btn w-50 btn-outline-light dropdown-toggle" data-bs-toggle="dropdown" type="button" id="setDropdownButton" >Pick a Set <span class="caret"></span></button>
+                              <ul class="dropdown-menu dropdown-menu-dark mb-0" id="setDropdownItems">
                                   <input onkeyup="setInputKey()" type="text" class="form-control form-control-dark" id="setInput" autocomplete="false" placeholder="Type to filter...">
                                 <% sets.forEach(set => { %>
-                                <li><a class="dropdown-item align-items-center gap-2 py-1">
-                                  <%= set.set_name %>
+                                <li><a onclick="setItemClick(this)" class="dropdown-item align-items-center gap-2 py-1" data-setRarities="<%= set.rarities %>" data-rarityHide="no" data-setID="<%= set.id %>">
+                                  <%= set.name %>
                                 </a></li>
                                 <% }) %>
                               </ul>
-                            </div>
                           </div>
                       </div>
-                        <div class="row row-cols-2">
-                            <div class="col">
-                              <div class="d-flex flex-column h-50 p-2 text-white">
-                                <h1 class="mt-3 mb-3 display-6 lh-1 fw-bold">Type</h1>
+                        <div class="row">
+                            <div class="col-3 p-1">
+                                <h2 class="text-white text-end">Type:</h2>
                               </div>
-                            </div>
-                            <div class="col">
-                              <div class="d-flex flex-column h-50 p-2 text-white">
-                                <div class="btn-group" role="group" aria-label="Basic outlined example">
+                            <div class="col p-1">
+                                <div class="btn-group btn-block" role="group" id="typeButtons">
                                   <% types.forEach(type => { %>
-                                    <button type="button" class="btn btn-outline-light"><%= type._id %></button>
+                                    <button onclick="typeClick(this)" type="button" class="btn btn-outline-light type-btn" data-typeStats="<%= type.stats %>"><%= type.name %></button>
                                   <% }) %>
-                                </div></h1>
+                                </div>
                               </div>
                             </div>
+                            <div class="row">
+                              <div class="col-3 p-1">
+                                  <h2 class="text-white text-end">Level:</h2>
+                                </div>
+                              <div class="col p-1">
+                                <div class="range">
+                                <input onchange="levelChange(this)" type="range" class="form-range align-middle w-75" min="0" max="20" value="0" id="levelRange">
+                              </div>
+                              </div>
+                              </div>
+                              <div class="row">
+                                <div class="col-3 p-1">
+                                    <h2 class="text-white text-end">Main Stat:</h2>
+                                  </div>
+                                <div class="col p-1">
+                                  <label for="mStatButtons" id="mStatBtnLbl" class="label">Pick a Type to see Main Stats</label>
+                                    <div class="btn-group btn-group-sm btn-block mainStatButtons" role="group" id="mStatButtons">
+                                      
+                                      <div id="mainStatItems"></div>
+
+                                    </div>
+                                  </div>
+                                </div>
+                                <div class="row my-3">
+                                  <div class="col-3 p-1">
+                                      <h2 class="text-white text-end">Sub Stats:</h2>
+                                    </div>
+                                  <div class="col p-1">
+                                        <% var subs = [1,2,3,4]%>
+                                        <% var sb, si %>
+                                        <%  subs.forEach(ss =>{ %>
+                                          <% sb = "subStat"+ss+"DropdownButton" %>
+                                        <div class="row mb-2">
+                                          <div class="col">
+                                        <button class="btn w-75 btn-outline-light dropdown-toggle" data-bs-toggle="dropdown" type="button" id="<%=sb%>" >Pick Sub Stat <%=ss%><span class="caret"></span></button>
+                                        <ul class="dropdown-menu dropdown-menu-dark mb-0" id="setDropdownItems">
+                                          <% sStats.forEach(sStat => { %>
+                                          <li><a onclick="sStatItemClick(this)" class="dropdown-item align-items-center gap-2 py-1" data-statHide="no" data-subStat="<%=ss%>" data-statID="<%= sStat.id %>">
+                                            <%= sStat.name %>
+                                          </a></li>
+                                          <% }) %>
+                                        </ul>
+                                        <% si = "subStat"+ss+"InputBox" %>
+                                  </div>
+                                        <div class="col-4">
+                                          <div class="form-outline form-white">
+                                        <input class="form-control border border-light w-75" type="text" id="<%=si%>" autocomplete="false">
+                                        <label class="form-label bg-dark m-1" for="<%=si%>">Value</label>
+                                      </div>
+                                      </div>
+                                    </div> 
+                                        <% }) %>
+
+                                      </div>
+                                    </div>
+                                  </div>
+                                </form>
                       </div>
                       </div>
                 </div>
             </main>
             <%- include('common/footer'); -%>
-        </div>
-      <!-- <script>
-        $(document).ready(function(){
-          $("#setInput").on("keyup", function() {
-            var setInputValue = $(this).val().toLowerCase();
-            $(".dropdown-menu li").filter(function() {
-              $(this).toggle($(this).text().toLowerCase().indexOf(setInputValue) > -1)
-            });
-          });
-          $("#setDropdown li a").on('click', function() {
-
-          })
-        });
-      </script> -->
     </body>
 </html>
