--- a/views/common/footer.ejs
+++ b/views/common/footer.ejs
@@ -1,3 +1,3 @@
-<footer class="mt-auto text-white-50">
+<!-- <footer class="mt-3 text-white-50 text-center fixed-bottom">
   <p>Sean Pollard's COM519 Advanced Databases Project @ Solent University</p>
-</footer>
+</footer> -->
