--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,9 +40,10 @@
     
         <!-- Custom styles for this template -->
         <link href="css/cover.css" rel="stylesheet">
-    </head>
-    <body class="d-flex h-100 text-center text-white bg-dark">
+        <script src="scripts/header.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>  
+    </head>
+    <body onload="navCheck()" class="d-flex text-center text-white bg-dark">
         <div class="container d-flex w-100 h-100 p-3 mx-auto flex-column">
             
             <%- include('common/header'); -%>
